testdata/golden/sema/valid/entrypoint/return_int.fmt
// Test: @entrypoint returning int is valid
@entrypoint
fn main() -> int {
    return 0;
}
