testdata/golden/sema/invalid/concurrency/spawn_reserved.fmt
// Test: spawn is reserved for routines/parallel runtime
// Expected: FUT7007
async fn foo() -> int { return 1; }

@entrypoint fn main() {
    let t = spawn foo();
}
